--- a/AJ SITE/styles/style.css
+++ b/AJ SITE/styles/style.css
@@ -610,6 +610,7 @@ body::-webkit-scrollbar-thumb {
     height: 'auto';
     justify-content: center; 
     align-items: center; 
+    margin-bottom: 30px;
 } 
 
 .title-info {
@@ -627,6 +628,8 @@ body::-webkit-scrollbar-thumb {
 .social-media-img {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 50px;
 }
 
 .content-info {
@@ -656,22 +659,24 @@ body::-webkit-scrollbar-thumb {
 .txt-logoW {
     color: var(--Branco, #EBECEC);
     font-family: Montserrat;
-    font-size: small;
+    font-size: 100%;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 40px;
+    text-align: center;
+    height: 20px;
 }
 
 .txt-logoI {
     color: var(--Branco, #EBECEC);
     font-family: Montserrat;
-    font-size: small;
+    font-size: 100%;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 40px;
 
+    text-align: center;
+    height: 20px;
 }
 
 .txt-logoF {
@@ -681,11 +686,25 @@ body::-webkit-scrollbar-thumb {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    text-align: center;    
+    height: 20px;
 }
 
+.infos {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
 
 .img-logo {
-    width: 100%;
+    width: 20%;
     height: 'auto';
 }
 
@@ -694,225 +713,156 @@ body::-webkit-scrollbar-thumb {
     height: 'auto';
 }
 
-/* *{
+@media (max-width: 510px) {
+    .txt-logoW {
+        color: var(--Branco, #EBECEC);
+        font-family: Montserrat;
+        font-size: 60%;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        text-align: center;
+        height: 20px;
+    }
+    
+    .txt-logoI {
+        color: var(--Branco, #EBECEC);
+        font-family: Montserrat;
+        font-size: 60%;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    
+        text-align: center;
+        height: 20px;
+    }
+    
+    .txt-logoF {
+        color: var(--Branco, #EBECEC);
+        font-family: Montserrat;
+        font-size: 60%;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        text-align: center;    
+        height: 20px;
+    }
 
+    .social-media-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .infos {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        gap: 10px;
+        background-color: Transparent;
+        background-repeat:no-repeat;
+        border: none;
+        cursor:pointer;
+        overflow: hidden;
+        outline:none;
+    }
+    
+    .img-logo {
+        width: 20%;
+        height: 'auto';
+    }
+    
+    .img-info {
+        display: flex;
+        width: 50%;
+    }
+
+    .vector-img {
+        width: 100%;
+        height: 'auto';
+    }
 }
 
-.background {
-    height: 3467px;
-    background: #139DF2;
+.jobs {
+    width: 100%;
+    background-color: #EBECEC;
+    padding: 20px;
 }
 
-body::-webkit-scrollbar {
-  width: 14px;
-}
-
-body::-webkit-scrollbar-track {
-  background: #139DF2; 
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #f9f9f9;   
-  border-radius: 12px;   
-  border: 3px solid #139DF2;  
-}
-
-.header {
+.squares {
     display: flex;
-    width: 98.1%;
-    height: 56px;
-    padding: 8px 16px;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
-    background: #f9f9f9;
+    gap: 10px;
+    justify-content: center;
 }
 
-.Text-Header {
-    color: var(--Azul-Escuro, #0F71F2);
-    text-align: center;
+.squares1 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.squares2 {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+.square-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.img-job {
+    width: 18px;
+    height: 18px;
+
+}
+
+.text-job {
+    margin: 0px;
+    margin-left: 5px;
+    font-size: 11px;
+    color: #0F71F2;
     font-family: Montserrat;
-    font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    height: auto;
 }
 
-.Logo-Header {
-    width: 35px;
-    height: 32px;
-    flex-shrink: 0;
+.title-job {
+    margin: 0px;
+    margin-left: 5px;
+    font-size: 30px;
+    color: #0F71F2;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.About {
+footer {
     display: flex;
     width: 100%;
-    height: 425px;
-    padding: 8px 0px;
-    justify-content: center;
     align-items: center;
-    gap: 74px;
-    flex-shrink: 0;
-}
-
-.square-image {
-    display: flex;
-    width: 301.5px;
-    height: 303px;
-    border-radius: 14px;
-    background: #0F71F2;
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.50);
     justify-content: center;
-    align-items:flex-end ;
+    background-color: #111;
+    height: 100px;
 }
 
-.Photo1 {
-    width: 221px;
-    height: 350px;
+.img {
+    width: 10%;
 }
 
-.text-about{
-    display: flex;
-    width: 294px;
-    height: 207px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 30px;
-    flex-shrink: 0;
-}
-
-.name-about {
-    width: 286px;
-    height: 36px;
-    flex-shrink: 0;
-    color: #EBECEC;
+.h1-footer {
+    color: var(--Branco, #EBECEC);
     font-family: Montserrat;
-    font-size: 24px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
-
-.description-about {
-    width: 299px;
-    height: 121px;
-    flex-shrink: 0;
-    color: #EBECEC;
-    font-family: Montserrat;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.what-we-do {
-    display: flex;
-    flex-direction: column;
-    width: 98.1%;
-    height: 18%;
-    padding: 0px 16px 0px 16px;
-    align-items: center;
-    align-content: center;
-    background: #0F88F2;
-    
-}
-
-.div-title-what-we-do {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-}
-
-.title-what-we-do {
-    color: var(--Branco, #EBECEC);
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-.cards {
-    display: flex;
-    width: 717px;
-    height: 384px;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: flex-start;
-    gap: 16px 8px;
-    flex-wrap: wrap;
-    margin-bottom: 5%;
-}
-
-.square-box {
-    display: flex;
-    width: 320px;
-    height: 179px;
-    padding: 8px 16px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 10px;
-    flex-shrink: 0;
-    border-radius: 14px;
-    background: #0F71F2;
-}
-
-.text-cards {
-    color: var(--Branco, #EBECEC);
-    font-family: Montserrat;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.IMG-briefcase {
-    width: 15%;
-    height: 24%;
-}
-
-.IMG-bar-chart {
-    width: 16%;
-    height: 24%;
-}
-
-.IMG-wrench {
-    width: 13%;
-    height: 20%;
-}
-
-.IMG-pencil {
-    width: 13%;
-    height: 20%;
-}
-
-.button-we-do {
-    display: flex;
-    width: 248px;
-    height: 54px;
-    padding: 8px 16px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-shrink: 0;
-    border-radius: 50px;
-    background: #EBECEC;
-    border: 0px;
-}
-
-.text-button {
-    color: #9AD914;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-} */
