--- a/AJ SITE/styles/Escrituração e tributária/styles.css
+++ b/AJ SITE/styles/Escrituração e tributária/styles.css
@@ -2,6 +2,18 @@
     box-sizing: border-box;
 }
 
+a:link {
+    text-decoration:none;
+}
+    
+a:visited {
+    text-decoration:none;
+}
+    
+a:hover {
+    text-decoration:underline;
+}
+
 .background {
     height: auto; /* Alterado para altura automática para se ajustar ao conteúdo */
     background: #139DF2;
